# agent-loop

./: .agent-loop.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN_SNAPSHOT.md  README.md  REVIEW_TEAM.md  TASKS_SNAPSHOT.md  change-flow.md  changes.md  new-ideas.md  new_ideas.md  next-level-plan.md  tasks.md
docs/: plan-unified-review-loop.md
src/: agent.rs  agent_registry.rs  config.rs  db.rs  error.rs  git.rs  interrupt.rs  main.rs  phases.rs  preflight.rs  prompts.rs  state.rs  stuck.rs  test_support.rs  wave.rs  wave_runtime.rs
src/tui/: mod.rs  project.rs
src/tui/views/: dashboard.rs  mod.rs  output.rs  progress.rs  tasks.rs  transcript.rs
tests/: command_semantics.rs  deprecation_warnings.rs  signal_interrupt_status.rs  sqlite_state.rs  status_corruption_warnings.rs  task_lifecycle_persistence.rs  tasks_deprecation_warning.rs
