[package]
name = "agent-loop"
version = "0.1.7"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"
